--- a/style.css
+++ b/style.css
@@ -1,27 +1,20 @@
+.header {
+    background: rgb(210, 228, 210);
+}
+
+#heading {
+    text-shadow: 1px 2px 3px rgb(56, 55, 55);
+}
+
+.hourBlock {
+    background: rgb(189, 212, 235);
+
+}
+
+.pasTime {
+    background: hotpink;
+}
+
 .time {
-    border-right: black;
-    border-style: solid;
-    border-right-width: 1px;
-    height: 100px;
-}
-
-.input {
-    background: rgb(103, 197, 10);
-    height: 100px;
-    border: black;
-    border-style: solid;
-    border-width: 1px;
-}
-
-.submit {
-    border-left: black;
-    border-style: solid;
-    border-left-width: 1px;
-    background: darkcyan;
-    height: 100px;
-
-}
-
-.subBtn {
-    display: block;
+padding-top: 30px;
 }
