updated page to have different sytles for past/present/future hour blocks, disabled button for past hour block, which is read only anyways

--- a/style.css
+++ b/style.css
@@ -11,10 +11,9 @@
 
 }
 
-/* .pasTime {
-    background: hotpink;
-    opacity: .2;
-} */
+.future {
+    background: rgb(189, 212, 220);
+}
 
 .time {
 padding-top: 30px;
